--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "serve-static": "~1.3.0",
-    "finalhandler": "~0.1.0"
+    "finalhandler": "~0.1.0",
+    "http-proxy": "~1.1.0"
   }
 }
